--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,14 @@
 <nav>
 	<ul class="nav {{include.navclass}}">
 		<li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}current{% endif %}">Home</a></li>
+		{% for parent in site.categories.main %}
+		<li><a href="{{site.baseurl}}{{parent.url}}">{{ parent.title }}</a>
+			<ul>
+				{% for post in site.categories.[parent.subcategory] %}
+				<li><a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></li>
+				{% endfor %}
+			</ul>
+		</li>
+		{% endfor %}
 	</ul>
 </nav>
