--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -1,3 +1,62 @@
-.nav li ul {
-	margin-left: 10px;
+.logo {
+	display: inline-block;
+	padding-top: 60px;
+	padding-bottom: 60px;
+}
+
+
+/* Style menu */
+
+nav {
+	background-color: #ffffff;
+	height: 100%;
+	width: 220px;
+	text-align: center;
+	position: fixed;
+	overflow: auto;
+}
+
+ul.main-menu .dropdown {
+	border: 0;
+	display: none;
+}
+ul.main-menu a.active + .dropdown {
+	display: block;
+}
+
+ul.main-menu {
+	border-top: 1px solid #f0f0f0;
+	list-style: none;
+}
+
+a:hover {
+	color: #ffffff;
+	background-color: #0a5fa3;
+}
+
+.active {
+	background-color: #0a5fa3;
+	color: #ffffff;
+}
+
+
+/* Style podmenu */
+
+.dropdown a {
+	background-color: #f5f5f5;
+	color: #aeaeae;
+}
+
+a {
+	display: block;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #f0f0f0;
+	color: #aeaeae;
+	text-decoration: none;
+}
+
+.dropdown a:hover {
+	color: #828282;
+	background-color: #ebebeb;
 }
