--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,12 @@
 <nav>
+
+	<img class="logo" src="{{site.baseurl}}/img/wikia-logo.png" alt="wikia logo"/>
+
 	<ul class="nav {{include.navclass}}">
 		<li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}current{% endif %}">Home</a></li>
 		{% for parent in site.categories.main %}
 		<li><a href="{{site.baseurl}}{{parent.url}}">{{ parent.title }}</a>
-			<ul>
+			<ul class="dropdown">
 				{% for post in site.categories.[parent.subcategory] %}
 				<li><a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></li>
 				{% endfor %}
@@ -12,3 +15,5 @@
 		{% endfor %}
 	</ul>
 </nav>
+
+
