--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-{% include nav.html navclass='nav-top' %}
+{% include nav.html navSecondaryClass="nav-secondary" %}
 
 <div class="content {{page.contentClass}}">
 	{{content}}
