--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -1,53 +1,62 @@
+/* line 1, ../_sass/common.scss */
 * {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
+/* line 6, ../_sass/common.scss */
 html {
-	height: 100%;
+  height: 100%;
 }
 
+/* line 10, ../_sass/common.scss */
 body {
-	font-family: "Helvetica Neue", Helvetica,Arial, sans-serif;
-	background-color: #e1e1e1;
-	height: 100%;
+  font-family: "Helvetica Neue", Helvetica,Arial, sans-serif;
+  background-color: #e1e1e1;
+  height: 100%;
 }
-
 
 /* Style homepage */
-
+/* line 19, ../_sass/common.scss */
 .main-image {
-	height: 100%;
-	background-image: url("{{site.baseurl}}/img/wikia-universe.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	margin-left: 220px;
-	color: #ffffff;
-	text-align: center;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  height: 100%;
+  background-image: url("{{site.baseurl}}/img/wikia-universe.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-left: 220px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
+/* line 31, ../_sass/common.scss */
 .main-image h1 {
-	color: #fff;
+  color: #fff;
+  font-weight: bold;
+}
+/* line 36, ../_sass/common.scss */
+.main-image h2 {
+  color: #fff;
 }
 
+/* line 41, ../_sass/common.scss */
 h1 {
-	font-size: 80px;
+  font-size: 80px;
 }
+
+/* line 44, ../_sass/common.scss */
 h2 {
-	font-size: 26px;
-	font-weight: normal;
+  font-size: 26px;
+  font-weight: normal;
 }
 
+/* line 49, ../_sass/common.scss */
 .content {
-	margin-left: 220px;
-	background-color: #ffffff;
+  margin-left: 220px;
+  background-color: #fff;
 }
-
+/* line 53, ../_sass/common.scss */
 .content p {
-	margin-bottom: 25px;
-	margin-top: 25px;
+  margin: 25px 0;
 }
