--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,11 +2,11 @@
 
 	<img class="logo" src="{{site.baseurl}}/img/wikia-logo.png" alt="wikia logo"/>
 
-	<ul class="nav {{include.navclass}}">
+	<ul class="nav nav-primary">
 		<li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}current{% endif %}">Home</a></li>
 		{% for parent in site.categories.main %}
 		<li><a href="{{site.baseurl}}{{parent.url}}">{{ parent.title }}</a>
-			<ul class="dropdown">
+			<ul class="dropdown {{include.navSecondaryClass}}">
 				{% for post in site.categories.[parent.subcategory] %}
 				<li><a href="{{site.baseurl}}{{post.url}}">{{post.title}}</a></li>
 				{% endfor %}
