Clean-up + jQuery support

--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -23,7 +23,7 @@ nav .logo {
   padding-bottom: 60px;
 }
 /* line 25, ../_sass/nav.scss */
-nav ul.nav-top {
+nav ul.nav-primary {
   border-top: 1px solid #f0f0f0;
   margin-left: 0;
   padding-left: 0;
