--- a/_includes/_sass/nav.scss
+++ b/_includes/_sass/nav.scss
@@ -22,7 +22,7 @@ nav {
 		padding-bottom: 60px;
 	}
 
-	ul.nav-top {
+	ul.nav-primary {
 		border-top: 1px solid #f0f0f0;
 		margin-left: 0;
 		padding-left: 0;
