--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -29,6 +29,11 @@ nav ul.nav-primary {
   padding-left: 0;
 }
 /* line 31, ../_sass/nav.scss */
+nav ul.nav-secondary {
+  margin-left: 0;
+  padding-left: 0;
+}
+/* line 36, ../_sass/nav.scss */
 nav a {
   display: block;
   padding-top: 20px;
@@ -37,33 +42,33 @@ nav a {
   color: #aeaeae;
   text-decoration: none;
 }
-/* line 39, ../_sass/nav.scss */
+/* line 44, ../_sass/nav.scss */
 nav a:hover {
   color: #ffffff;
   background-color: #0a5fa3;
 }
-/* line 45, ../_sass/nav.scss */
+/* line 50, ../_sass/nav.scss */
 nav .active {
   background-color: #0a5fa3;
   color: #ffffff;
 }
-/* line 50, ../_sass/nav.scss */
+/* line 55, ../_sass/nav.scss */
 nav .dropdown {
   border: 0;
   display: none;
 }
-/* line 54, ../_sass/nav.scss */
+/* line 59, ../_sass/nav.scss */
 nav .dropdown a {
   background-color: #f5f5f5;
   color: #aeaeae;
 }
-/* line 58, ../_sass/nav.scss */
+/* line 63, ../_sass/nav.scss */
 nav .dropdown a:hover {
   color: #828282;
   background-color: #ebebeb;
 }
 
-/* line 66, ../_sass/nav.scss */
+/* line 71, ../_sass/nav.scss */
 ul.main-menu a.active + .dropdown {
   display: block;
 }
