--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
 	<img class="logo" src="{{site.baseurl}}/img/wikia-logo.png" alt="wikia logo"/>
 
 	<ul class="nav nav-primary">
-		<li><a class="{% if page.url == '/' %}active{% endif %}">Home</a></li>
+		<li><a href="{{site.baseurl}}/" class="{% if page.url == '/' %}active{% endif %}">Home</a></li>
 		{% for parent in site.categories.main %}
 		<li><a>{{ parent.title }}</a>
 			<ul class="nav nav-secondary dropdown">
