--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -16,47 +16,72 @@ body {
   height: 100%;
 }
 
+/* line 16, ../_sass/common.scss */
+.page {
+  height: 100%;
+}
+
+/* line 20, ../_sass/common.scss */
+.full-width {
+  height: 100%;
+  margin: 0 auto;
+  max-width: initial;
+  width: 100%;
+}
+
+/* line 27, ../_sass/common.scss */
+.no-margin {
+  margin: 0;
+}
+
+/* line 31, ../_sass/common.scss */
+.main-columns {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 /* Style homepage */
-/* line 19, ../_sass/common.scss */
+/* line 39, ../_sass/common.scss */
 .main-image {
   height: 100%;
   background-image: url("{{site.baseurl}}/img/wikia-universe.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  margin-left: 220px;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-/* line 31, ../_sass/common.scss */
+/* line 50, ../_sass/common.scss */
 .main-image h1 {
   color: #fff;
   font-weight: bold;
 }
-/* line 36, ../_sass/common.scss */
+/* line 55, ../_sass/common.scss */
 .main-image h2 {
   color: #fff;
 }
 
-/* line 41, ../_sass/common.scss */
+/* line 60, ../_sass/common.scss */
 h1 {
   font-size: 80px;
 }
 
-/* line 44, ../_sass/common.scss */
+/* line 63, ../_sass/common.scss */
 h2 {
   font-size: 26px;
   font-weight: normal;
 }
 
-/* line 49, ../_sass/common.scss */
+/* line 68, ../_sass/common.scss */
 .content {
-  margin-left: 220px;
   background-color: #fff;
 }
-/* line 53, ../_sass/common.scss */
+/* line 71, ../_sass/common.scss */
 .content p {
   margin: 25px 0;
 }
+
+/* Style subpage */
