--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -3,37 +3,36 @@
 nav {
   background-color: #fff;
   height: 100%;
-  width: 220px;
   text-align: center;
-  position: fixed;
   overflow: auto;
+  width: 100%;
 }
-/* line 11, ../_sass/nav.scss */
+/* line 10, ../_sass/nav.scss */
 nav ul {
   list-style: none;
 }
-/* line 14, ../_sass/nav.scss */
+/* line 13, ../_sass/nav.scss */
 nav ul li {
   list-style-type: none;
 }
-/* line 19, ../_sass/nav.scss */
+/* line 18, ../_sass/nav.scss */
 nav .logo {
   display: inline-block;
   padding-top: 60px;
   padding-bottom: 60px;
 }
-/* line 25, ../_sass/nav.scss */
+/* line 24, ../_sass/nav.scss */
 nav ul.nav-primary {
   border-top: 1px solid #f0f0f0;
   margin-left: 0;
   padding-left: 0;
 }
-/* line 31, ../_sass/nav.scss */
+/* line 30, ../_sass/nav.scss */
 nav ul.nav-secondary {
   margin-left: 0;
   padding-left: 0;
 }
-/* line 36, ../_sass/nav.scss */
+/* line 35, ../_sass/nav.scss */
 nav a {
   display: block;
   padding-top: 20px;
@@ -42,33 +41,33 @@ nav a {
   color: #aeaeae;
   text-decoration: none;
 }
-/* line 44, ../_sass/nav.scss */
+/* line 43, ../_sass/nav.scss */
 nav a:hover {
   color: #ffffff;
   background-color: #0a5fa3;
 }
-/* line 50, ../_sass/nav.scss */
-nav .active {
+/* line 51, ../_sass/nav.scss */
+nav .active a {
   background-color: #0a5fa3;
   color: #ffffff;
 }
-/* line 55, ../_sass/nav.scss */
+/* line 57, ../_sass/nav.scss */
 nav .dropdown {
   border: 0;
   display: none;
 }
-/* line 59, ../_sass/nav.scss */
+/* line 61, ../_sass/nav.scss */
 nav .dropdown a {
   background-color: #f5f5f5;
   color: #aeaeae;
 }
-/* line 63, ../_sass/nav.scss */
+/* line 65, ../_sass/nav.scss */
 nav .dropdown a:hover {
   color: #828282;
   background-color: #ebebeb;
 }
 
-/* line 71, ../_sass/nav.scss */
+/* line 73, ../_sass/nav.scss */
 ul.main-menu a.active + .dropdown {
   display: block;
 }
