--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,17 @@
 	<script src="{{site.baseurl}}/js/main.js"></script>
 </head>
 <body>
-
-{% include nav.html %}
-
-<div class="content {{page.contentClass}}">
-	{{content}}
+<div class="page">
+	<div class="row full-width">
+		<div class="small-3 columns main-columns">
+			{% include nav.html %}
+		</div>
+		<div class="small-9 columns main-columns">
+			<div class="content {{page.contentClass}}">
+				{{content}}
+			</div>
+		</div>
+	</div>
 </div>
-
 </body>
 </html>
