--- a/_layouts/subpage.html
+++ b/_layouts/subpage.html
@@ -1,7 +1,10 @@
 ---
 layout: default
-titleAfter: Front-end work made easy.
-meta: Definition of Wikia look and feel with code examples ready to use.
-priority: 1.0
-contentClass: main-image
+contentClass: subpage
 ---
+<div class="subpage-category">
+	{{page.subpageCategory}}
+</div>
+<div class="container-inner">
+	{{content}}
+</div>
