--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -41,47 +41,79 @@ body {
   padding: 0;
 }
 
-/* Style homepage */
-/* line 39, ../_sass/common.scss */
-.main-image {
+/* line 41, ../_sass/common.scss */
+.main-columns-right {
   height: 100%;
   background-image: url("{{site.baseurl}}/img/wikia-universe.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+/* Style homepage */
+/* line 51, ../_sass/common.scss */
+.content-home {
+  background: transparent;
+  height: 100%;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-/* line 50, ../_sass/common.scss */
-.main-image h1 {
+/* line 59, ../_sass/common.scss */
+.content-home h1 {
   color: #fff;
   font-weight: bold;
 }
-/* line 55, ../_sass/common.scss */
-.main-image h2 {
+/* line 64, ../_sass/common.scss */
+.content-home h2 {
   color: #fff;
 }
 
-/* line 60, ../_sass/common.scss */
+/* line 69, ../_sass/common.scss */
 h1 {
   font-size: 80px;
 }
 
-/* line 63, ../_sass/common.scss */
+/* line 72, ../_sass/common.scss */
 h2 {
   font-size: 26px;
   font-weight: normal;
 }
 
-/* line 68, ../_sass/common.scss */
-.content {
-  background-color: #fff;
-}
-/* line 71, ../_sass/common.scss */
-.content p {
+/* line 79, ../_sass/common.scss */
+.container p {
   margin: 25px 0;
 }
 
 /* Style subpage */
+/* line 86, ../_sass/common.scss */
+.subpage-category {
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 20px 30px;
+}
+
+/* line 93, ../_sass/common.scss */
+.container-inner {
+  background-color: white;
+  padding: 0 20px;
+}
+/* line 97, ../_sass/common.scss */
+.container-inner header {
+  border-bottom: 1px solid #C6D0D7;
+  padding: 50px 0px;
+}
+/* line 101, ../_sass/common.scss */
+.container-inner header h1 {
+  color: #0F3154;
+  font-size: 42px;
+  font-weight: bold;
+}
+/* line 107, ../_sass/common.scss */
+.container-inner header p {
+  color: #666;
+  font-size: 16px;
+  font-weight: normal;
+}
