--- a/_includes/_sass/nav.scss
+++ b/_includes/_sass/nav.scss
@@ -2,74 +2,94 @@
 
 nav {
 	background-color: #fff;
-	height: 100%;	
-	text-align: center;
+	height: 100%;
 	overflow: auto;
+	text-align: center;
 	width: 100%;
-
-	ul {
-		list-style: none;
-
-		li {
-			list-style-type: none;
-		}
-	}
 
 	.logo {
 		display: inline-block;
-		padding-top: 60px;
 		padding-bottom: 60px;
+		padding-top: 60px;
 	}
 
-	ul.nav-primary {
+	ul {
+		list-style: none;
+		text-align: left;
+
+		li {
+			list-style-type: none;
+			ul {
+				margin-left: 0;
+			}
+		}
+	}
+
+	.nav-primary {
 		border-top: 1px solid #f0f0f0;
 		margin-left: 0;
 		padding-left: 0;
 	}
 
-	ul.nav-secondary {
-		margin-left: 0;
-		padding-left: 0;
+	.dropdown {
+		display: none;
 	}
 
 	a {
-		display: block;
-		padding-top: 20px;
-		padding-bottom: 20px;
 		border-bottom: 1px solid #f0f0f0;
-		color: #aeaeae;
+		color: #808080;
+		display: block;
+		padding: 20px 0 20px 20px;
 		text-decoration: none;
 
 		&:hover {
-			color: #ffffff;
+			color: #808080;
+		}
+	}
+
+	.item-primary {
+		&:hover {
 			background-color: #0a5fa3;
+			color: #ffffff;
+		}
+	}
+
+	.item-secondary {
+		background-color: #ebebeb;
+
+		&:hover {
+			background-color: #cecece;
+		}
+	}
+
+	.item-tertiary {
+		padding-left: 35px;
+
+		&:hover {
+			background-color: #ebebeb;
 		}
 	}
 
 	.active {
-
-		a {
+		&>.item-primary {
 			background-color: #0a5fa3;
 			color: #ffffff;
+			font-weight: bold;
 		}
-	}
-
-	.dropdown {
-		border: 0;
-		display: none;
-
-		a {
-			background-color: #f5f5f5;
-			color: #aeaeae;
-
+		&>.item-secondary {
+			background-color: #ebebeb;
+			font-weight: bold;
+		}
+		&>.item-tertiary {
+			color: #0a5fa3;
+			font-weight: bold;
 			&:hover {
-				color: #828282;
-				background-color: #ebebeb;
+				background-color: transparent;
 			}
 		}
 	}
 }
 
-ul.main-menu a.active + .dropdown {
+.active a + .dropdown {
 	display: block;
 }
