--- a/_includes/_sass/nav.scss
+++ b/_includes/_sass/nav.scss
@@ -1,11 +1,13 @@
 /* Style menu */
 
 nav {
+	border-right: 1px solid #f0f0f0;
+	width: 320px;
+	position: fixed;
 	background-color: #fff;
 	height: 100%;
 	overflow: auto;
 	text-align: center;
-	width: 100%;
 
 	.logo {
 		display: inline-block;
