--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -1,42 +1,44 @@
 /* Style menu */
 /* line 3, ../_sass/nav.scss */
 nav {
+  border-right: 1px solid #f0f0f0;
+  width: 320px;
+  position: fixed;
   background-color: #fff;
   height: 100%;
   overflow: auto;
   text-align: center;
-  width: 100%;
 }
-/* line 10, ../_sass/nav.scss */
+/* line 12, ../_sass/nav.scss */
 nav .logo {
   display: inline-block;
   padding-bottom: 60px;
   padding-top: 60px;
 }
-/* line 16, ../_sass/nav.scss */
+/* line 18, ../_sass/nav.scss */
 nav ul {
   list-style: none;
   text-align: left;
 }
-/* line 20, ../_sass/nav.scss */
+/* line 22, ../_sass/nav.scss */
 nav ul li {
   list-style-type: none;
 }
-/* line 22, ../_sass/nav.scss */
+/* line 24, ../_sass/nav.scss */
 nav ul li ul {
   margin-left: 0;
 }
-/* line 28, ../_sass/nav.scss */
+/* line 30, ../_sass/nav.scss */
 nav .nav-primary {
   border-top: 1px solid #f0f0f0;
   margin-left: 0;
   padding-left: 0;
 }
-/* line 34, ../_sass/nav.scss */
+/* line 36, ../_sass/nav.scss */
 nav .dropdown {
   display: none;
 }
-/* line 38, ../_sass/nav.scss */
+/* line 40, ../_sass/nav.scss */
 nav a {
   border-bottom: 1px solid #f0f0f0;
   color: #808080;
@@ -44,53 +46,53 @@ nav a {
   padding: 20px 0 20px 20px;
   text-decoration: none;
 }
-/* line 45, ../_sass/nav.scss */
+/* line 47, ../_sass/nav.scss */
 nav a:hover {
   color: #808080;
 }
-/* line 51, ../_sass/nav.scss */
+/* line 53, ../_sass/nav.scss */
 nav .item-primary:hover {
   background-color: #0a5fa3;
   color: #ffffff;
 }
-/* line 57, ../_sass/nav.scss */
+/* line 59, ../_sass/nav.scss */
 nav .item-secondary {
   background-color: #ebebeb;
 }
-/* line 60, ../_sass/nav.scss */
+/* line 62, ../_sass/nav.scss */
 nav .item-secondary:hover {
   background-color: #cecece;
 }
-/* line 65, ../_sass/nav.scss */
+/* line 67, ../_sass/nav.scss */
 nav .item-tertiary {
   padding-left: 35px;
 }
-/* line 68, ../_sass/nav.scss */
+/* line 70, ../_sass/nav.scss */
 nav .item-tertiary:hover {
   background-color: #ebebeb;
 }
-/* line 74, ../_sass/nav.scss */
+/* line 76, ../_sass/nav.scss */
 nav .active > .item-primary {
   background-color: #0a5fa3;
   color: #ffffff;
   font-weight: bold;
 }
-/* line 79, ../_sass/nav.scss */
+/* line 81, ../_sass/nav.scss */
 nav .active > .item-secondary {
   background-color: #ebebeb;
   font-weight: bold;
 }
-/* line 83, ../_sass/nav.scss */
+/* line 85, ../_sass/nav.scss */
 nav .active > .item-tertiary {
   color: #0a5fa3;
   font-weight: bold;
 }
-/* line 86, ../_sass/nav.scss */
+/* line 88, ../_sass/nav.scss */
 nav .active > .item-tertiary:hover {
   background-color: transparent;
 }
 
-/* line 93, ../_sass/nav.scss */
+/* line 95, ../_sass/nav.scss */
 .active a + .dropdown {
   display: block;
 }
