Refactoring CSS and ading header for typography page

--- a/_includes/_sass/home.scss
+++ b/_includes/_sass/home.scss
@@ -4,7 +4,7 @@
 	align-items: center;
 	display: flex;
 	justify-content: center;
-	margin-left: 320px;
+	margin-left: $menuwidth;
 	min-height: 100%;
 	text-align: center;
 
