--- a/_layouts/subpage.html
+++ b/_layouts/subpage.html
@@ -3,7 +3,7 @@ layout: default
 contentClass: subpage
 ---
 <div class="subpage-category">
-	{{page.subpageCategory}}
+	{{page.title}}
 </div>
 <div class="container-inner">
 	{{content}}
