--- a/_includes/_sass/common.scss
+++ b/_includes/_sass/common.scss
@@ -13,10 +13,6 @@ body {
 	height: 100%;
 }
 
-.page {
-	height: 100%;
-}
-
 .full-width {
 	height: 100%;
 	margin: 0 auto;
@@ -52,40 +48,25 @@ h2 {
 }
 
 .main-container {
-	margin-left: 320px;
+	margin-left: $menuwidth;
 	p {
 		margin: 25px 0;
 	}
 }
 
-/* Style subpage */
-
-.subpage-category {
-	color: white;
-	font-size: 18px;
-	font-weight: bold;
-	padding: 20px 30px;
+.button {
+	height: 40px;
+	line-height: 40px;
+	color:#fff;
+	background-color: $primaryColor;
+	display: inline-block;
+	padding: 0 25px;
+	&:hover {
+		background-color: $primaryColorDarker;
+		color: #fff;
+	}
 }
 
-.container-inner {
-	background-color: white;
-	padding: 0 20px;
-
-	header {
-		border-bottom: 1px solid #C6D0D7;
-		padding: 50px 0px;
-
-		h1 {
-			color: #0F3154;
-			font-size: 42px;
-			font-weight: bold;
-		}
-
-		p {
-			color: #666;
-			font-size: 16px;
-			font-weight: normal;
-		}
-	}
-
+.right {
+	float: right;
 }
