--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	<script src="{{site.baseurl}}/js/main.js"></script>
 </head>
 <body>
-	{% include nav.html %}
+	{% include nav.html navclass='nav-top' %}
 	{{content}}
 </body>
 </html>
