--- a/_includes/_sass/subpage.scss
+++ b/_includes/_sass/subpage.scss
@@ -38,3 +38,11 @@
 	}
 
 }
+
+.code-field {
+	background-color: #ebebeb;
+	min-height: 100px;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+}
