--- a/_includes/_sass/common.scss
+++ b/_includes/_sass/common.scss
@@ -39,12 +39,18 @@ body {
 }
 
 h1 {
-	font-size: 80px;
+	font-size: 38px;
+	line-height: 46px;
+	font-weight: bold;
 }
 h2 {
 	font-size: 38px;
 	font-weight: normal;
 	text-align: center;
+}
+
+p {
+	font-size: 16px;
 }
 
 .main-container {
