--- a/_includes/_sass/common.scss
+++ b/_includes/_sass/common.scss
@@ -38,15 +38,39 @@ body {
 	background-position: center;
 }
 
+h1, h2, h3, h4, h5, h6 {
+	font-weight: bold;
+}
+
+h4, h5, h6 {
+	line-height: 22px;
+}
+
 h1 {
 	font-size: 38px;
 	line-height: 46px;
-	font-weight: bold;
 }
+
 h2 {
-	font-size: 38px;
-	font-weight: normal;
-	text-align: center;
+	font-size: 29px;
+	line-height: 38px;
+}
+
+h3 {
+	font-size: 20px;
+	line-height: 26px;
+}
+
+h4 {
+	font-size: 17px;
+}
+
+h5 {
+	font-size: 15px;
+}
+
+h6 {
+	font-size: 13px;
 }
 
 p {
