--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -47,34 +47,63 @@ body {
 }
 
 /* line 41, ../_sass/common.scss */
-h1 {
-  font-size: 38px;
-  line-height: 46px;
+h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
 
-/* line 46, ../_sass/common.scss */
-h2 {
-  font-size: 38px;
-  font-weight: normal;
-  text-align: center;
+/* line 45, ../_sass/common.scss */
+h4, h5, h6 {
+  line-height: 22px;
 }
 
-/* line 52, ../_sass/common.scss */
+/* line 49, ../_sass/common.scss */
+h1 {
+  font-size: 38px;
+  line-height: 46px;
+}
+
+/* line 54, ../_sass/common.scss */
+h2 {
+  font-size: 29px;
+  line-height: 38px;
+}
+
+/* line 59, ../_sass/common.scss */
+h3 {
+  font-size: 20px;
+  line-height: 26px;
+}
+
+/* line 64, ../_sass/common.scss */
+h4 {
+  font-size: 17px;
+}
+
+/* line 68, ../_sass/common.scss */
+h5 {
+  font-size: 15px;
+}
+
+/* line 72, ../_sass/common.scss */
+h6 {
+  font-size: 13px;
+}
+
+/* line 76, ../_sass/common.scss */
 p {
   font-size: 16px;
 }
 
-/* line 56, ../_sass/common.scss */
+/* line 80, ../_sass/common.scss */
 .main-container {
   margin-left: 320px;
 }
-/* line 58, ../_sass/common.scss */
+/* line 82, ../_sass/common.scss */
 .main-container p {
   margin: 25px 0;
 }
 
-/* line 63, ../_sass/common.scss */
+/* line 87, ../_sass/common.scss */
 .button {
   height: 40px;
   line-height: 40px;
@@ -83,13 +112,13 @@ p {
   display: inline-block;
   padding: 0 25px;
 }
-/* line 70, ../_sass/common.scss */
+/* line 94, ../_sass/common.scss */
 .button:hover {
   background-color: #0a4b8e;
   color: #fff;
 }
 
-/* line 76, ../_sass/common.scss */
+/* line 100, ../_sass/common.scss */
 .right {
   float: right;
 }
@@ -233,14 +262,15 @@ p {
 /* line 11, ../_sass/home.scss */
 .header-home h1 {
   color: #fff;
-  font-weight: bold;
+  font-size: 65px;
 }
 /* line 16, ../_sass/home.scss */
 .header-home h2 {
   color: #fff;
+  font-weight: normal;
 }
 
-/* line 21, ../_sass/home.scss */
+/* line 22, ../_sass/home.scss */
 .content-home {
   background-color: #fff;
   padding: 40px 0;
@@ -288,11 +318,26 @@ p {
   font-weight: normal;
 }
 
-/* line 42, ../_sass/subpage.scss */
+/* line 41, ../_sass/subpage.scss */
 .code-field {
   background-color: #ebebeb;
-  min-height: 100px;
-  text-align: center;
+  clear: both;
   display: flex;
   justify-content: center;
+  min-height: 100px;
+  text-align: center;
+}
+
+/* line 50, ../_sass/subpage.scss */
+.typo-item {
+  margin-bottom: 120px;
+}
+/* line 52, ../_sass/subpage.scss */
+.typo-item .columns {
+  margin-bottom: 25px;
+}
+
+/* line 57, ../_sass/subpage.scss */
+.content {
+  padding-bottom: 120px;
 }
