Colors page content

--- a/_includes/_sass/custom-variables.scss
+++ b/_includes/_sass/custom-variables.scss
@@ -3,3 +3,8 @@ $menuwidth: 320px;
 /* colors */
 $primaryColor: #0a5fa3;
 $primaryColorDarker: #0A4B8E;
+$mordorColor: #000;
+$darkKnightColor: #092140;
+$coolBlueColor: #0a5fa3;
+$walterWhiteColor: #c7d1d8;
+$winterfellColor: #fff;
