--- a/_includes/_sass/common.scss
+++ b/_includes/_sass/common.scss
@@ -85,12 +85,12 @@ p {
 }
 
 .button {
-	height: 40px;
-	line-height: 40px;
+	text-align: center;
+	padding: 10px 25px;
+	line-height: 1.2em;
 	color:#fff;
 	background-color: $primaryColor;
 	display: inline-block;
-	padding: 0 25px;
 	&:hover {
 		background-color: $primaryColorDarker;
 		color: #fff;
