--- a/_includes/_sass/subpage.scss
+++ b/_includes/_sass/subpage.scss
@@ -1,5 +1,7 @@
 /* Style subpage */
 
+@import "colors-subpage";
+
 .subpage-category {
 	background-image: url("{{site.baseurl}}/img/wikia-universe.jpg");
 	background-position: center;
@@ -22,6 +24,7 @@
 
 	header {
 		border-bottom: 1px solid #C6D0D7;
+		margin-bottom: 55px;
 		padding: 50px 0px;
 
 		h1 {
